--- a/index.html
+++ b/index.html
@@ -6,92 +6,114 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
 
-    
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
-        <ul class="nav">
-          <li><a href="./index.html" class="link current">Studio</a></li>
-          <li><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-
-      <ul class="contacts">
-        <li>
-          <a href="mailto:info@devstudio.com" class="email"
-            >info@devstudio.com</a
+      <div class="container header">
+        <nav class="navigation">
+          <a href="./index.html" class="logo"
+            >Web<span class="black">Studio</span></a
           >
-        </li>
-        <li><a href="tel:+380961111111" class="email">+38 096 111 11 11</a></li>
-      </ul>
+          <ul class="nav">
+            <li class="nav-item">
+              <a href="./index.html" class="link current">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="link">Portfolio</a>
+            </li>
+            <li class="nav-item"><a href="" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+
+        <ul class="contacts">
+          <li class="nav-item">
+            <a href="mailto:info@devstudio.com" class="email"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="tel:+380961111111" class="email">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">
-          Effective solutions for <br />
-          your business
-        </h1>
-        <button type="button" class="button">Request our service</button>
-      </section>
-
-      <section class="section">
-        <h2 class="section-title hidden">Наші переваги</h2>
-        <div>
-          <ul>
-            <li>
-              <h3 class="title">Attention to details</h3>
-              <p class="text">
-                We go into all the details and processes of your business to
-                develop a customized solution.
-              </p>
-            </li>
-          </ul>
-
-          <ul>
-            <li>
-              <h3 class="title">Punctuality</h3>
-              <p class="text">
-                With us, you can feel safe and secure. An important principle of
-                the company: respect your time and respect the agreed deadlines.
-              </p>
-            </li>
-          </ul>
-
-          <ul>
-            <li>
-              <h3 class="title">Planning</h3>
-              <p class="text">
-                You will be able to observe and participate in every phase of
-                solution development and implementation.
-              </p>
-            </li>
-          </ul>
-
-          <ul>
-            <li>
-              <h3 class="title">Modern technologies</h3>
-              <p class="text">
-                We use innovative tools to solve assigned tasks. It's time to
-                simplify work processes.
-              </p>
-            </li>
-          </ul>
+        <div class="container hero-container">
+          <h1 class="hero-title">Effective solutions for your business</h1>
+          <button type="button" class="button">Request our service</button>
         </div>
       </section>
 
       <section class="section">
-        <div>
-          <h2 class="section-title">What we do</h2>
-          <ul>
-            <li>
+        <div class="container">
+          <h2 class="section-title visually-hidden">Наші переваги</h2>
+          <div class="advantages">
+            <ul class="adv-list">
+              <li class="adv-item">
+                <h3 class="title">Attention to details</h3>
+                <p class="text">
+                  We go into all the details and processes of your business to
+                  develop a customized solution.
+                </p>
+              </li>
+            </ul>
+
+            <ul class="adv-list">
+              <li class="adv-item">
+                <h3 class="title">Punctuality</h3>
+                <p class="text">
+                  With us, you can feel safe and secure. An important principle
+                  of the company: respect your time and respect the agreed
+                  deadlines.
+                </p>
+              </li>
+            </ul>
+
+            <ul class="adv-list">
+              <li class="adv-item">
+                <h3 class="title">Planning</h3>
+                <p class="text">
+                  You will be able to observe and participate in every phase of
+                  solution development and implementation.
+                </p>
+              </li>
+            </ul>
+
+            <ul class="adv-list">
+              <li class="adv-item">
+                <h3 class="title">Modern technologies</h3>
+                <p class="text">
+                  We use innovative tools to solve assigned tasks. It's time to
+                  simplify work processes.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title title-work">What we do</h2>
+
+          <ul class="work">
+            <li class="work-item">
               <img
                 src="./img/what-we-do-1.jpg"
                 alt="coding on a laptop"
@@ -99,7 +121,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="work-item">
               <img
                 src="./img/what-we-do-2.jpg"
                 alt="creating a phone app"
@@ -107,7 +129,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="work-item">
               <img
                 src="./img/what-we-do-3.jpg"
                 alt="choosing a color on a tablet"
@@ -120,51 +142,59 @@
       </section>
 
       <section class="section team">
-        <div>
+        <div class="container">
           <h2 class="section-title">Our Team</h2>
-          <ul>
-            <li>
+          <ul class="team">
+            <li class="team-member">
               <img
                 src="./img/our-team-1.jpg"
                 alt="the employee profile"
                 width="270"
                 height="260"
               />
-              <h3 lang="ru" class="title-team">Игорь Демьяненко</h3>
-              <p class="text-team">Product Designer</p>
+              <div class="team-content">
+                <h3 lang="ru" class="title-team">Игорь Демьяненко</h3>
+                <p class="text-team">Product Designer</p>
+              </div>
             </li>
 
-            <li>
+            <li class="team-member">
               <img
                 src="./img/our-team-2.jpg"
                 alt="the employee profile"
                 width="270"
                 height="260"
               />
-              <h3 lang="ru" class="title-team">Ольга Репина</h3>
-              <p class="text-team">Frontend Developer</p>
+              <div class="team-content">
+                <h3 lang="ru" class="title-team">Ольга Репина</h3>
+                <p class="text-team">Frontend Developer</p>
+              </div>
             </li>
 
-            <li>
+            <li class="team-member">
               <img
                 src="./img/our-team-3.jpg"
                 alt="the employee profile"
                 width="270"
                 height="260"
               />
-              <h3 lang="ru" class="title-team">Николай Тарасов</h3>
-              <p class="text-team">Marketing</p>
+              <div class="team-content">
+                <h3 lang="ru" class="title-team">Николай Тарасов</h3>
+                <p class="text-team">Marketing</p>
+              </div>
             </li>
 
-            <li>
+            <li class="team-member">
               <img
                 src="./img/our-team-4.jpg"
                 alt="the employee profile"
                 width="270"
                 height="260"
               />
-              <h3 lang="ru" class="title-team">Михаил Ермаков</h3>
-              <p class="text-team">UI Designer</p>
+              <div class="team-content">
+                <h3 lang="ru" class="title-team">Михаил Ермаков</h3>
+                <p class="text-team">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -172,8 +202,10 @@
     </main>
 
     <footer class="footer">
-      <div>
-        <a href="./index.html" class="logo">WebStudio</a>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="white">Studio</span></a
+        >
 
         <address>
           <ul class="address">
