--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -14,164 +22,195 @@
 
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
-        <ul class="nav">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="./portfolio.html" class="link current">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-
-      <ul class="contacts">
-        <li>
-          <a href="mailto:info@devstudio.com" class="email"
-            >info@devstudio.com</a
+      <div class="container header">
+        <nav class="navigation">
+          <a href="./index.html" class="logo"
+            >Web<span class="black">Studio</span></a
           >
-        </li>
-        <li><a href="tel:+380961111111" class="email">+38 096 111 11 11</a></li>
-      </ul>
+          <ul class="nav">
+            <li class="nav-item">
+              <a href="./index.html" class="link">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="link current">Portfolio</a>
+            </li>
+            <li class="nav-item"><a href="" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+
+        <ul class="contacts">
+          <li class="nav-item">
+            <a href="mailto:info@devstudio.com" class="email"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="tel:+380961111111" class="email">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main>
-      <section class="portfolio">
-        <h1 class="hidden">Portfolio</h1>
-        <!-- Make invisible with CSS -->
+      <section class="section portfolio">
+        <div class="container">
+          <h1 class="visually-hidden">Portfolio</h1>
 
-        <ul class="menu">
-          <li><button type="button" class="menu-btn">All</button></li>
-          <li><button type="button" class="menu-btn">Web-sites</button></li>
-          <li><button type="button" class="menu-btn">Apps</button></li>
-          <li><button type="button" class="menu-btn">Design</button></li>
-          <li><button type="button" class="menu-btn">Marketing</button></li>
-        </ul>
+          <ul class="menu">
+            <li><button type="button" class="menu-btn">All</button></li>
+            <li><button type="button" class="menu-btn">Web-sites</button></li>
+            <li><button type="button" class="menu-btn">Apps</button></li>
+            <li><button type="button" class="menu-btn">Design</button></li>
+            <li><button type="button" class="menu-btn">Marketing</button></li>
+          </ul>
 
-        
-        <ul class="projects">
-          <li>
-            <a href="" class="project-link">
-              <img
-                src="./img/project-1.jpg"
-                alt="website picture"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Technoduck</h2>
-              <p class="project-text">Web-site</p>
-            </a>
-          </li>
+          <ul class="projects">
+            <li class="project-card">
+              <a href="" class="project-link">
+                <img
+                  src="./img/project-1.jpg"
+                  alt="website picture"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-descr">
+                  <h2 class="project-title">Technoduck</h2>
+                  <p class="project-text">Web-site</p>
+                </div>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="project-link">
-              <img
-                src="./img/project-2.jpg"
-                alt="poster design"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Poster New Orlean vs Golden Star</h2>
-              <p class="project-text">Design</p>
-            </a>
-          </li>
+            <li class="project-card">
+              <a href="" class="project-link">
+                <img
+                  src="./img/project-2.jpg"
+                  alt="poster design"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-descr">
+                  <h2 class="project-title">
+                    Poster New Orlean vs Golden Star
+                  </h2>
+                  <p class="project-text">Design</p>
+                </div>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="project-link">
-              <img
-                src="./img/project-3.jpg"
-                alt="restaurant logo "
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Seafood Restaurant</h2>
-              <p class="project-text">Apps</p>
-            </a>
-          </li>
+            <li class="project-card">
+              <a href="" class="project-link">
+                <img
+                  src="./img/project-3.jpg"
+                  alt="restaurant logo "
+                  width="370"
+                  height="294"
+                />
+                <div class="project-descr">
+                  <h2 class="project-title">Seafood Restaurant</h2>
+                  <p class="project-text">Apps</p>
+                </div>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="project-link">
-              <img
-                src="./img/project-4.jpg"
-                alt="earphones"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Project Prime</h2>
-              <p class="project-text">Marketing</p>
-            </a>
-          </li>
+            <li class="project-card">
+              <a href="" class="project-link">
+                <img
+                  src="./img/project-4.jpg"
+                  alt="earphones"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-descr">
+                  <h2 class="project-title">Project Prime</h2>
+                  <p class="project-text">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="project-link">
-              <img
-                src="./img/project-5.jpg"
-                alt="app logo"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Project Boxes</h2>
-              <p class="project-text">Apps</p>
-            </a>
-          </li>
+            <li class="project-card">
+              <a href="" class="project-link">
+                <img
+                  src="./img/project-5.jpg"
+                  alt="app logo"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-descr">
+                  <h2 class="project-title">Project Boxes</h2>
+                  <p class="project-text">Apps</p>
+                </div>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="project-link">
-              <img
-                src="./img/project-6.jpg"
-                alt="website"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Inspiration has no Borders</h2>
-              <p class="project-text">Web-site</p>
-            </a>
-          </li>
+            <li class="project-card">
+              <a href="" class="project-link">
+                <img
+                  src="./img/project-6.jpg"
+                  alt="website"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-descr">
+                  <h2 class="project-title">Inspiration has no Borders</h2>
+                  <p class="project-text">Web-site</p>
+                </div>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="project-link">
-              <img
-                src="./img/project-7.jpg"
-                alt="magazine design"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Limited Edition</h2>
-              <p class="project-text">Design</p>
-            </a>
-          </li>
+            <li class="project-card">
+              <a href="" class="project-link">
+                <img
+                  src="./img/project-7.jpg"
+                  alt="magazine design"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-descr">
+                  <h2 class="project-title">Limited Edition</h2>
+                  <p class="project-text">Design</p>
+                </div>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="project-link">
-              <img
-                src="./img/project-8.jpg"
-                alt="work sample"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Project LAB</h2>
-              <p class="project-text">Marketing</p>
-            </a>
-          </li>
+            <li class="project-card">
+              <a href="" class="project-link">
+                <img
+                  src="./img/project-8.jpg"
+                  alt="work sample"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-descr">
+                  <h2 class="project-title">Project LAB</h2>
+                  <p class="project-text">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li>
-            <a href="" class="project-link">
-              <img
-                src="./img/project-9.jpg"
-                alt="laptop"
-                width="370"
-                height="294"
-              />
-              <h2 class="project-title">Growing Business</h2>
-              <p class="project-text">Apps</p>
-            </a>
-          </li>
-        </ul>
-        >
+            <li class="project-card">
+              <a href="" class="project-link">
+                <img
+                  src="./img/project-9.jpg"
+                  alt="laptop"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-descr">
+                  <h2 class="project-title">Growing Business</h2>
+                  <p class="project-text">Apps</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <div>
-        <a href="./index.html" class="logo">WebStudio</a>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >Web<span class="white">Studio</span></a
+        >
 
         <address>
           <ul class="address">
