--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
       </section>
 
-      <section class="section team">
+      <section class="section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team">
@@ -202,7 +202,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <a href="./index.html" class="logo"
           >Web<span class="white">Studio</span></a
         >
