--- a/portfolio.html
+++ b/portfolio.html
@@ -207,7 +207,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <a href="./index.html" class="logo"
           >Web<span class="white">Studio</span></a
         >
