--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
   </head>
 
   <body>
-    <header>
-      <div class="container header">
+    <header class="header">
+      <div class="container header-container">
         <nav class="navigation">
           <a href="./index.html" class="logo"
             >Web<span class="black">Studio</span></a
@@ -208,27 +208,27 @@
 
     <footer class="footer">
       <div class="container footer-container">
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo logo-footer"
           >Web<span class="white">Studio</span></a
         >
 
         <address>
           <ul class="address">
-            <li>
+            <li class="address-item">
               <a
                 href="https://goo.gl/maps/2ozX1iyW8z7ysF988"
                 target="_blank"
                 class="address-title"
                 rel="noreferrer noopener nofollower"
-                >695 Park Ave, New York, NY 10065,<br />United States</a
+                >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="address-item">
               <a href="mailto:info@devstudio.com" class="address-title tel"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="address-item">
               <a href="tel:+380961111111" class="address-title tel"
                 >+38 096 111 11 11</a
               >
